--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.nc filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
+Library/PlayerDataCache/Win64/Data/sharedassets0.assets.resS filter=lfs diff=lfs merge=lfs -text
+THE[[:space:]]Game_Data/sharedassets0.assets.resS filter=lfs diff=lfs merge=lfs -text
